improved test coverage, added app sample class and  updated readme