@@ -1,11 +1,28 @@
+/*
+ * Copyright (c) 2019 Bynder B.V. All rights reserved.
+ *
+ * Licensed under the MIT License. See LICENSE file in the project root for full license
+ * information.
+ *
+ * JUnit framework component copyright (c) 2002-2017 JUnit. All Rights Reserved. Licensed under
+ * Eclipse Public License - v 1.0. You may obtain a copy of the License at
+ * https://www.eclipse.org/legal/epl-v10.html.
+ */
 package com.bynder.sdk.configuration;
 
 import static org.junit.Assert.assertEquals;
 
+import com.bynder.sdk.model.oauth.Token;
 import java.net.URI;
 import java.net.URL;
+import org.junit.Before;
 import org.junit.Test;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
 
+/**
+ * Tests the {@link Configuration} class methods.
+ */
 public class ConfigurationTest {
 
     public static final String EXPECTED_BASE_URL = "https://baseurl.bynder.com";
@@ -13,14 +30,27 @@ public class ConfigurationTest {
     public static final String EXPECTED_CLIENT_SECRET = "clientSecret";
     public static final String EXPECTED_REDIRECT_URI = "https://redirecturi.bynder.com";
 
-    @Test
-    public void buildConfiguration() throws Exception {
-        Configuration configuration = new Configuration.Builder(new URL(EXPECTED_BASE_URL),
-            EXPECTED_CLIENT_ID, EXPECTED_CLIENT_SECRET, new URI(EXPECTED_REDIRECT_URI)).build();
+    @Mock
+    private Token token;
+    @Mock
+    private HttpConnectionSettings httpConnectionSettings;
 
-        assertEquals(new URL(EXPECTED_BASE_URL), configuration.getBaseUrl());
+    @Before
+    public void setUp() {
+        MockitoAnnotations.initMocks(this);
+    }
+
+    @Test
+    public void buildConfigurationWithoutCallback() throws Exception {
+        Configuration configuration = new Configuration.Builder(new URL(EXPECTED_BASE_URL),
+            EXPECTED_CLIENT_ID, EXPECTED_CLIENT_SECRET, new URI(EXPECTED_REDIRECT_URI))
+            .setToken(token).setHttpConnectionSettings(httpConnectionSettings).build();
+
+        assertEquals(EXPECTED_BASE_URL, configuration.getBaseUrl().toString());
         assertEquals(EXPECTED_CLIENT_ID, configuration.getClientId());
         assertEquals(EXPECTED_CLIENT_SECRET, configuration.getClientSecret());
-        assertEquals(new URI(EXPECTED_REDIRECT_URI), configuration.getRedirectUri());
+        assertEquals(EXPECTED_REDIRECT_URI, configuration.getRedirectUri().toString());
+        assertEquals(token, configuration.getToken());
+        assertEquals(httpConnectionSettings, configuration.getHttpConnectionSettings());
     }
 }
